# codex-cloud

./: .gitignore  CHANGELOG.md  PNPM.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: README.md  ci.yml  cloud-ci.yml  rust-ci.yml  rust-release.yml
cloud/: .env.example  Justfile  Makefile  README.md  docker-compose.production.yml  docker-compose.yml
cloud/backend/: Cargo.toml  Dockerfile  README.md
cloud/backend/src/: artifacts.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  security.rs  state.rs  storage.rs
cloud/backend/tests/: artifacts.rs  auth.rs  codex_api.rs  oidc.rs  task_flow.rs  tasks.rs
cloud/backend/tests/common/: mod.rs
cloud/executor/scripts/: build-base-image.sh  create-snapshot.sh  refresh-pool.sh
cloud/frontend/: Dockerfile  next.config.mjs  package.json  playwright.config.ts  tsconfig.json
cloud/frontend/pages/: _app.tsx  index.tsx
cloud/frontend/styles/: globals.css
cloud/ops/backup/: backup.sh  restore.sh
cloud/ops/monitoring/: alerting-rules.yml  prometheus.yml
cloud/ops/systemd/: codex-compose.service  codex-ignite-supervisor.service
cloud/scripts/: cli-contract.sh
cloud/supervisor/: Cargo.toml  Dockerfile  README.md
cloud/supervisor/src/: main.rs  pool.rs
cloud/supervisor/src/runner/: mod.rs
codex-cli/: package-lock.json  package.json
codex-cli/scripts/: build_npm_package.py  install_native_deps.py
codex-rs/: Cargo.toml  README.md  default.nix
codex-rs/cli/src/: main.rs
codex-rs/cloud-tasks/src/: app.rs
codex-rs/core/src/: config.rs  default_client.rs  model_provider_info.rs
codex-rs/responses-api-proxy/: README.md
codex-rs/responses-api-proxy/npm/: README.md  package.json
codex-rs/scripts/: create_github_release
codex-rs/tui/src/: clipboard_paste.rs  history_cell.rs  lib.rs  updates.rs
docs/: advanced.md  codex-cloud-mvp.md  codex-cloud-replication-plan.md  codex-cloud.md  config.md  contributing.md  install.md  release_management.md
docs/cloud/: perf-report.md  runbook.md  security-validation.md  validation-checklist.md
scripts/: stage_npm_packages.py
scripts/perf/: hyperfine.sh  k6.js
sdk/typescript/: README.md  package.json
(+27 files in other folders)
